gitops/espresso/apps/signal/alertmanager-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-signal-bridge
  namespace: signal
spec:
  selector:
    app: alertmanager-signal-bridge
  ports:
    - name: http
      port: 8080
      targetPort: http
