gitops/espresso/apps/signal/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-cli-internal
  namespace: signal
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: signal-cli
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: signal-cli
  namespace: signal
spec:
  selector:
    app: signal-cli
  ports:
    - name: http
      port: 3000
      targetPort: http
